# codetest_dataeng

./: pyproject.toml  scraped_data.json
scrapper/: scrap.py
