[tool.poetry]
name = "data-engineer-test"
version = "0.1.0"
description = ""
authors = ["Esteve Soria <esofabian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
